--- a/src/main/resources/templates/createPiloto.html
+++ b/src/main/resources/templates/createPiloto.html
@@ -22,7 +22,7 @@
     <input id="equipo" type="text" name="equipo" th:field="*{equipo}"><br><br>
     <label for="pais" >Pais Piloto: </label>
     <input id="pais" type="text" name="pais" th:field="*{pais}"><br><br>
-    <label for="nacimiento" style="padding: 10px">Fecha de Nacimiento Piloto: </label>
+    <label for="nacimiento">Fecha de Nacimiento Piloto: </label>
     <input id="nacimiento" type="date" name="nacimiento" th:field="*{fechaNacimiento}"><br><br>
     <input type="submit" value="Guardar Piloto">
   </form>
